@@ -163,6 +163,16 @@
 ** type: entier
 ** valeurs: current, server (valeur par défaut: `current`)
 
+* *irc.look.new_channel_position*
+** description: `force la position du nouveau canal dans la liste des tampons (none = position par défaut (devrait être le dernier tampon), next = tampon courant + 1, near_server = après le dernier canal/privé du serveur)`
+** type: entier
+** valeurs: none, next, near_server (valeur par défaut: `none`)
+
+* *irc.look.new_pv_position*
+** description: `force la position du nouveau privé dans la liste des tampons (none = position par défaut (devrait être le dernier tampon), next = tampon courant + 1, near_server = après le dernier canal/privé du serveur)`
+** type: entier
+** valeurs: none, next, near_server (valeur par défaut: `none`)
+
 * *irc.look.nick_color_stop_chars*
 ** description: `caractères utilisés pour l'arrêt dans le pseudo lors du calcul de la couleur avec les lettres du pseudo (au moins un caractère en dehors de cette liste doit être dans la chaîne avant de s'arrêter) (exemple: le pseudo "|nick|away" avec "|" dans les caractères retournera la couleur du pseudo "|nick")`
 ** type: chaîne
@@ -187,16 +197,6 @@
 ** description: `afficher les notices comme des messages privés (si auto, utilise le tampon privé s'il est trouvé)`
 ** type: entier
 ** valeurs: auto, never, always (valeur par défaut: `auto`)
-
-* *irc.look.open_channel_near_server*
-** description: `ouvrir les nouveaux canaux près du serveur`
-** type: booléen
-** valeurs: on, off (valeur par défaut: `off`)
-
-* *irc.look.open_pv_near_server*
-** description: `ouvrir les nouveaux privés près du serveur`
-** type: booléen
-** valeurs: on, off (valeur par défaut: `off`)
 
 * *irc.look.part_closes_buffer*
 ** description: `fermer le tampon lorsque /part est exécuté sur un canal`
