@@ -52,8 +52,8 @@ struct t_config_section *irc_config_section_server = NULL;
 struct t_config_option *irc_config_look_color_nicks_in_server_messages;
 struct t_config_option *irc_config_look_color_pv_nick_like_channel;
 struct t_config_option *irc_config_look_server_buffer;
-struct t_config_option *irc_config_look_open_channel_near_server;
-struct t_config_option *irc_config_look_open_pv_near_server;
+struct t_config_option *irc_config_look_new_channel_position;
+struct t_config_option *irc_config_look_new_pv_position;
 struct t_config_option *irc_config_look_nick_prefix;
 struct t_config_option *irc_config_look_nick_suffix;
 struct t_config_option *irc_config_look_nick_completion_smart;
@@ -1545,16 +1545,24 @@ irc_config_init ()
         "merge_with_core|merge_without_core|independent", 0, 0, "merge_with_core",
         NULL, 0, NULL, NULL,
         &irc_config_change_look_server_buffer, NULL, NULL, NULL);
-    irc_config_look_open_channel_near_server = weechat_config_new_option (
+    irc_config_look_new_channel_position = weechat_config_new_option (
         irc_config_file, ptr_section,
-        "open_channel_near_server", "boolean",
-        N_("open new channels near server"),
-        NULL, 0, 0, "off", NULL, 0, NULL, NULL, NULL, NULL, NULL, NULL);
-    irc_config_look_open_pv_near_server = weechat_config_new_option (
+        "new_channel_position", "integer",
+        N_("force position of new channel in list of buffers "
+           "(none = default position (should be last buffer)r, "
+           "next = current buffer + 1, near_server = after last channel/pv "
+           "of server)"),
+        "none|next|near_server", 0, 0, "none",
+        NULL, 0, NULL, NULL, NULL, NULL, NULL, NULL);
+    irc_config_look_new_pv_position = weechat_config_new_option (
         irc_config_file, ptr_section,
-        "open_pv_near_server", "boolean",
-        N_("open new privates near server"),
-        NULL, 0, 0, "off", NULL, 0, NULL, NULL, NULL, NULL, NULL, NULL);
+        "new_pv_position", "integer",
+        N_("force position of new private in list of buffers "
+           "(none = default position (should be last buffer)r, "
+           "next = current buffer + 1, near_server = after last channel/pv "
+           "of server)"),
+        "none|next|near_server", 0, 0, "none",
+        NULL, 0, NULL, NULL, NULL, NULL, NULL, NULL);
     irc_config_look_nick_prefix = weechat_config_new_option (
         irc_config_file, ptr_section,
         "nick_prefix", "string",
